--- a/4-angular/ambiente-angular/src/app/app.component.html
+++ b/4-angular/ambiente-angular/src/app/app.component.html
@@ -43,25 +43,28 @@
 </ul>
 </div>
 
-<ul class="list-group mx-auto col-3">
-    <li 
-        class="list-group-item"
-        *ngFor="let pessoa of pessoas"    
-    >
-        O nome da pessoa é {{pessoa.nome}} {{pessoa.sobrenome}}
-    </li>
-</ul>
+<app-list-people></app-list-people>
 
 <div class="col-4 mx-auto my-3 text-center">
     <h3 appMarcaTexto corDeFundo="blue" corDoTexto="black">{{ nome }}</h3>
     <button class="btn btn-success col-4 mx-auto" (click)="clicou('Lucas')">Clique</button>
 </div>
  
-<div class="col-4 mx-auto text-center">
+<div class="col-4 mx-auto my-3 text-center">
     <input 
         type="text" class="form-control"
         placeholder="Digite alguma coisa"
         [(ngModel)]="text"
     >
-    <h4>Saída: {{ text }}</h4>
+    <h4 class="my-3">Saída: {{ text }}</h4>
 </div>
+
+<div class="container my-5">
+    <div class="row d-flex align-item-center justify-content-center">
+        <h2 class="text-center">LISTAGEM DE PERSONAGENS RICK AND MORTY</h2>
+        <div class="col-12">
+            <app-list-api></app-list-api>
+        </div>
+    </div>
+</div>
+
